# ennui.me

./: .gitignore  about.rst  contact.markdown  default.nix  ennui.cabal  index.markdown  site.hs  stack.yaml
_site/: index.html  rss.xml
_site/2019-03-01 Functors_For_Nothing_Monads_For_Free/: index.html
_site/2020-04-03 X is just a monoid of Category Of Y Part 1/: index.html
_site/2020-04-03 X is just a monoid of Category Of Y Part 2/: index.html
_site/blog/page/1/: index.html
_site/css/: default.css
css/: default.css
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.5/: ennui-0.1.0.0-inplace.conf  package.cache
posts/: 2019-03-01 Functors_For_Nothing_Monads_For_Free.markdown  2020-04-03 X is just a monoid of Category Of Y Part 1.markdown  2020-04-03 X is just a monoid of Category Of Y Part 2.markdown
src/: Feed.hs
templates/: blogpage.html  default.html  pagefooter.html  post.html  posts.html
